# ai-twitch-chat

./: Cargo.toml  Dioxus.toml  LICENSE  config.yaml  package-lock.json
assets/: tailwind.css
src/: main.rs
src/message_worker/: buffer.rs  mod.rs  producer.rs  types.rs
src/openai_client/: mod.rs  openai_client.rs  openai_client_config.rs
src/websocket/: handler.rs  mod.rs
