[package]
name = "ai-twitch-chat"
version = "0.1.0"
authors = ["Snekussaurier <valentin.schiffl@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["fullstack"] }
openai-api-rs = { version = "6.0", optional = true }
serde = "1.0.219"
serde_yaml = "0.9.34"
tokio = { version = "1", optional = true}
axum = { version = "0.7.0", optional = true }
serde_json = "1.0.140"
xcap = { version = "0.4.0", optional = true}
fs_extra = { version = "1.3.0", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:openai-api-rs", "dep:tokio", "dep:axum", "dep:xcap", "dep:fs_extra"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

  [profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
