[package]
name = "ai-twitch-chat"
version = "0.1.0"
authors = ["Snekussaurier <valentin.schiffl@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
base64 = "0.22.1"
dioxus = { version = "0.6.0", features = [] }
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
gloo-net = "0.6.0"
image = "0.25.5"
openai-api-rs = "6.0.3"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1", feature=["full"] }
tokio-tungstenite = "0.26.2"
xcap = "0.4.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
